[gd_scene load_steps=4 format=3 uid="uid://ckhrw47j13tmk"]

[ext_resource type="FontFile" uid="uid://dqv7wo45g4knb" path="res://Roboto-Regular.ttf" id="1"]
[ext_resource type="Script" uid="uid://cq0bgwfna7wos" path="res://TrendLabel.gd" id="2"]

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("1"), ExtResource("1")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="PanelContainer" type="Button"]
offset_right = 150.0
offset_bottom = 35.0
custom_minimum_size = Vector2(150, 35)
size_flags_horizontal = 0
script = ExtResource("2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 6.0
offset_top = 4.0
offset_right = 206.0
offset_bottom = 34.0
theme_override_constants/separation = 10

[node name="ColorPickerButton" type="ColorPickerButton" parent="HBoxContainer"]
offset_right = 30.0
offset_bottom = 25.0
custom_minimum_size = Vector2(30, 25)
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="HBoxContainer"]
offset_left = 40.0
offset_right = 72.0
offset_bottom = 30.0
custom_minimum_size = Vector2(0, 20)
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_fonts/font = SubResource("5")
text = "Niv√•"
valign = 1

[node name="Label2" type="Label" parent="HBoxContainer"]
offset_left = 82.0
offset_right = 98.0
offset_bottom = 30.0
custom_minimum_size = Vector2(0, 20)
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_fonts/font = SubResource("5")
text = "??"
valign = 1

[node name="Config" type="PanelContainer" parent="."]
visible = false
offset_left = 49.0
offset_top = 3.0
offset_right = 168.0
offset_bottom = 153.0

[node name="VBoxContainer" type="VBoxContainer" parent="Config"]
offset_left = 7.0
offset_top = 7.0
offset_right = 112.0
offset_bottom = 171.0

[node name="Label" type="Label" parent="Config/VBoxContainer"]
offset_right = 105.0
offset_bottom = 14.0
text = "Max"

[node name="Max" type="LineEdit" parent="Config/VBoxContainer"]
offset_top = 18.0
offset_right = 105.0
offset_bottom = 42.0
caret_blink = true
caret_blink_interval = 0.5

[node name="Label2" type="Label" parent="Config/VBoxContainer"]
offset_top = 46.0
offset_right = 105.0
offset_bottom = 60.0
text = "Min"

[node name="Min" type="LineEdit" parent="Config/VBoxContainer"]
offset_top = 64.0
offset_right = 105.0
offset_bottom = 88.0
caret_blink = true
caret_blink_interval = 0.5

[node name="CheckBox" type="CheckBox" parent="Config/VBoxContainer"]
offset_top = 92.0
offset_right = 105.0
offset_bottom = 116.0
text = " Auto scale"

[node name="Slett" type="Button" parent="Config/VBoxContainer"]
offset_top = 120.0
offset_right = 105.0
offset_bottom = 140.0
text = "Slett"

[node name="Lukk" type="Button" parent="Config/VBoxContainer"]
offset_top = 144.0
offset_right = 105.0
offset_bottom = 164.0
text = "Lukk"

[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Config/VBoxContainer/Lukk" to="." method="_on_Lukk_pressed"]
